alpm-types/src/snapshots/path::invalid_soname_lookup_directory_parser@case_3.snap
---
source: alpm-types/src/path.rs
---
:/usr/lib
^
invalid prefix for a shared object lookup path
Parser failed with the following error:
:/usr/lib
^
invalid first character of name
expected ASCII alphanumeric character, `_`, `@`, `+`
